# wetalk

./: .clang-format  .gitignore  CLAUDE.md  CLEANUP_EVENTBUS.sh  CMakeLists.txt  CMakeUserPresets.json  CONSTRAINTS.md  EVENTBUS_REFACTOR_SUMMARY.md  LazyLodaer.cpp  README.md  TODO.md  conanfile.py
.claude/: settings.local.json
.claude/skills/update-claude-md/: SKILL.md
api-spec/: README.md  auth.md  chat.md  common.md  contacts.md  errors.md  flows.md  groups.md  moments.md  test.md
backend/: .gitignore  QUICKSTART.md  README.md  config.py  conftest.py  database.py  init_test_data.py  main.py  pyproject.toml  pytest.ini  test_websocket.py
backend/core/: __init__.py  database.py  models.py
backend/docs/: QUICKSTART.md
backend/managers/: __init__.py  connection_manager.py
backend/routers/: auth.py  chat.py  contacts.py  groups.py  moments.py  test.py
backend/scripts/: init_test_data.py
backend/tests/: README.md  test_auth.py  test_chat.py
conan/debug/: profile
conan/release/: profile
docs/: coding_constraints.md  constraints.md  conventions.md  core-architecture.md  data-cache-mechanism.md  data-models.md  plan-cache-refactor.md  plan-chat-refactor.md  plan-merge-storage-into-network.md  websocket-backend-summary.md  websocket-client-design.md
include/wechat/chat/: ChatManager.h  ChatPresenter.h  ChatSignals.h  SessionPresenter.h
include/wechat/contacts/: ContactsPresenter.h
include/wechat/core/: AppPaths.h  Event.h  EventBus.h  Group.h  Message.h  User.h
include/wechat/log/: Log.h
include/wechat/login/: LoginPresenter.h
include/wechat/network/: AuthService.h  ChatService.h  ContactService.h  GroupService.h  MomentService.h  NetworkClient.h  NetworkTypes.h  WebSocketClient.h
include/wechat/storage/: DatabaseManager.h  FriendshipDao.h  GroupDao.h  MessageDao.h  UserDao.h
resources/: resources.qrc
src/: main.cpp
src/app/: CMakeLists.txt  IconSidebar.cpp  IconSidebar.h  MainWindow.cpp  MainWindow.h  main.cpp
src/auth/: CMakeLists.txt  placeholder.cpp
src/auth/sandbox/: main.cpp
src/auth/tests/: test_auth.cpp
src/cache/: CMakeLists.txt  LocalAuthCache.cpp  LocalAuthCache.h  LocalChatCache.cpp  LocalChatCache.h  LocalContactCache.cpp  LocalContactCache.h  LocalDatabase.cpp  LocalDatabase.h  LocalGroupCache.cpp  LocalGroupCache.h  LocalMomentCache.cpp  LocalMomentCache.h
src/chat/: CMakeLists.txt  ChatController.cpp  ChatController.h  ChatManager.cpp  ChatPage.cpp  ChatPage.h  ChatPresenter.cpp  ChatWidget.cpp  ChatWidget.h  MessageItemWidget.cpp  MessageItemWidget.h  MessageListView.cpp  MessageListView.h  MessageUtils.cpp  MessageUtils.h  MockAutoResponder.cpp  MockAutoResponder.h  MockBackend.cpp  MockBackend.h  SessionListWidget.cpp  SessionListWidget.h  SessionPresenter.cpp  TODO.md  placeholder.cpp
src/chat/sandbox/: ChatSandbox.cpp  ChatSandbox.h  main.cpp
src/chat/tests/: test_chat.cpp
src/chat/tests/unit/: test_chat.cpp  test_session.cpp
src/contacts/: CMakeLists.txt  ContactsPresenter.cpp  ContactsWidget.cpp  ContactsWidget.h  placeholder.cpp
src/contacts/sandbox/: main.cpp
src/contacts/tests/: test_contacts.cpp
src/contacts/tests/unit/: test_contacts.cpp
src/core/: AppPaths.cpp  CMakeLists.txt  Core.cpp  EventBus.cpp  Log.cpp  placeholder.cpp
src/core/tests/: test_app_paths.cpp  test_core.cpp
src/core/tools/: StandardizeResources.cpp
src/grpc/: CMakeLists.txt  GrpcAuthService.cpp  GrpcAuthService.h  GrpcNetworkClient.cpp  GrpcNetworkClient.h
src/log/: CMakeLists.txt  Log.cpp  placeholder.cpp
src/log/sandbox/: main.cpp
src/login/: CMakeLists.txt  LoginPresenter.cpp  LoginWidget.cpp  LoginWidget.h
src/login/sandbox/: main.cpp
src/login/tests/: login_screen_test.cpp  test_login.cpp
src/login/tests/screen/: login_screen_test.cpp
src/login/tests/unit/: LoginTestFixture.h  test_login_auth.cpp  test_login_qr.cpp  test_login_register.cpp  test_login_validation.cpp  test_main.cpp
src/moments/: CMakeLists.txt  placeholder.cpp
src/moments/sandbox/: main.cpp
src/moments/tests/unit/: test_moments.cpp
src/network/: CMakeLists.txt  GrpcAuthService.cpp  GrpcAuthService.h  GrpcNetworkClient.cpp  GrpcNetworkClient.h  LocalNetworkClient.cpp  LocalNetworkClient.h  MockAuthService.cpp  MockAuthService.h  MockChatService.cpp  MockChatService.h  MockContactService.cpp  MockContactService.h  MockDataStore.cpp  MockDataStore.h  MockGroupService.cpp  MockGroupService.h  MockMomentService.cpp  MockMomentService.h  MockNetworkClient.cpp  MockNetworkClient.h  WsAuthService.cpp  WsAuthService.h  WsChatService.cpp  WsChatService.h  WsClient.cpp  WsClient.h  WsContactService.cpp  WsContactService.h  WsGroupService.cpp  WsGroupService.h  WsMomentService.cpp  WsMomentService.h  WsNetworkClient.cpp  WsNetworkClient.h  placeholder.cpp
src/network/proto/: auth.proto
src/network/tests/: test_auth.cpp  test_chat.cpp  test_contacts.cpp  test_group.cpp  test_integration.cpp  test_moments.cpp  test_network.cpp
src/network/tests/unit/: test_auth.cpp  test_contacts.cpp  test_group.cpp  test_integration.cpp  test_moments.cpp
src/storage/: CMakeLists.txt  DatabaseManager.cpp  FriendshipDao.cpp  GroupDao.cpp  MessageDao.cpp  UserDao.cpp  placeholder.cpp
src/storage/tests/: test_storage.cpp
tests/screenshots/: README.md
tests/screenshots/login/expected/: README.md
