[project]
name = "wetalk-backend"
version = "0.1.0"
description = "WeTalk FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

